[tool.poetry]
name = "m5"
version = "0.1.0"
description = ""
authors = ["bbbales2 <bbbales2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.1"
jaxlib = "^0.4.1"
dm-haiku = "^0.0.9"
numpy = "^1.24.1"
plotnine = "^0.10.1"
pandas = "^1.5.2"
pendulum = "^2.1.2"
sortedcontainers = "^2.4.0"
typing-extensions = "^4.4.0"
pytest = "^7.2.1"
blackjax = {git = "https://github.com/blackjax-devs/blackjax"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
